# ELP-Rumble-Detector

./: .gitignore  .gitmodules  README.md  RNN.py  cnn.py  cnn_config.py  main.py  plan.md  pyproject.toml  requirements.txt  rnn.py  rnn_config.py  rnn_test.py  test_cnn.py  test_rnn.py  test_underfitting.py
Legacy/: check_labels.py  cnn_config.py  data_path_config.py  inspect_record.py  rnn_config.py
Legacy/scripts/: inspect_record.sh
data_creation/: convert_audio_to_spec_tfrecords.py  data_path_config.py  neg_audio_clips.py  pos_audio_clips.py
input_pipeline/: spectrogram_tfrecords.py
models/: cnn.py  cnn_config.py  cnn_test.py
notebooks/: cnn_results.ipynb
scripts/: check_labels.sh  test_underfitting.sh
slurm_scripts/: _run-train-gpu.sh  run-train-gpu-debug.sh  run-train-gpu-shared.sh  setup-pythonuserbase.sh  submit-train.sh
src/elp_rumble/: evaluate_cnn.py  train_compare.py
src/elp_rumble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/elp_rumble/config/: paths.py
src/elp_rumble/data_creation/: convert_audio_to_spec_tfrecords.py  create_clips_plan.py  create_data_plan.py  create_splits.py  create_tfrecords.py  cut_wav_clips.py  neg_audio_clips.py  pos_audio_clips.py  utils.py
src/elp_rumble/data_creation/splits/: model1.csv  model2.csv  model3.csv
src/elp_rumble/input_pipeline/: spectrogram_tfrecords.py
src/elp_rumble/models/: cnn.py  cnn_config.py  cnn_test.py  rnn.py  rnn_config.py  rnn_test.py
src/elp_rumble/training/: data_loading.py  train_cnn.py  train_compare.py  train_rnn.py
training/: train_cnn.py
