[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elp-rumble"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
  "python-dotenv",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "tensorflow",
  "matplotlib",
  "tensorboard",
  "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]