[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elp-rumble"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
  "python-dotenv",
  "numpy<2",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
]

[project.optional-dependencies]
full = [
  "tensorflow==2.15.0",
  "tensorboard==2.15.2",
  "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
